[gd_scene load_steps=18 format=3 uid="uid://dmtedsek4dwqd"]

[ext_resource type="Script" uid="uid://cjqdw80rt3tw4" path="res://Scenes/Characters/Enemies/seaworm.gd" id="1_11bq8"]
[ext_resource type="Shader" uid="uid://ctk76iejukosx" path="res://Shaders/effects.gdshader" id="2_g06gj"]
[ext_resource type="Texture2D" uid="uid://by1cr208wf0id" path="res://Sprites/seaworm.png" id="2_prfo8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uqovy"]
resource_local_to_scene = true
shader = ExtResource("2_g06gj")
shader_parameter/shading_option = 0
shader_parameter/opacitystrength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_g06gj"]
atlas = ExtResource("2_prfo8")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqovy"]
atlas = ExtResource("2_prfo8")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qh7w"]
atlas = ExtResource("2_prfo8")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i8w3"]
atlas = ExtResource("2_prfo8")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_qcf0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g06gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqovy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qh7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i8w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qh7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqovy")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_7i8w3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8qh7w"]
resource_name = "blink"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_qcf0x"]
resource_name = "heal"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/shading_option")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x10bu"]
_data = {
&"RESET": SubResource("Animation_7i8w3"),
&"blink": SubResource("Animation_8qh7w"),
&"heal": SubResource("Animation_qcf0x")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x10bu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yhsky"]
radius = 557.396

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11bq8"]
size = Vector2(60, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prfo8"]
size = Vector2(45, 42.5671)

[node name="seaworm" type="CharacterBody2D"]
rotation = 2.44346
collision_layer = 0
collision_mask = 0
script = ExtResource("1_11bq8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_uqovy")
position = Vector2(-39.3598, 53.1301)
sprite_frames = SubResource("SpriteFrames_qcf0x")
animation = &"walk"
frame_progress = 0.197345

[node name="effects" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x10bu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-39.3598, 53.1301)
shape = SubResource("CircleShape2D_x10bu")
disabled = true

[node name="Detection" type="Area2D" parent="."]
visible = false
position = Vector2(-39.3598, 53.1301)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_yhsky")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(-39.3598, 53.1301)
collision_layer = 256
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.546032, -9.98508)
rotation = -2.44346
shape = SubResource("RectangleShape2D_11bq8")

[node name="AttackHitbox" type="Area2D" parent="."]
visible = false
position = Vector2(-39.3598, 53.1301)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(40.2033, -53.3575)
rotation = -2.44346
shape = SubResource("RectangleShape2D_prfo8")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Health" type="Control" parent="."]
visible = false
top_level = true
layout_mode = 3
anchors_preset = 0
offset_top = -16.0
offset_right = 39.0
offset_bottom = 24.0
scale = Vector2(1.5, 1.5)

[node name="HealthBar" type="ColorRect" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = -26.0
color = Color(1, 0, 0, 0.588235)

[node name="Label" type="Label" parent="Health"]
layout_mode = 0
offset_left = -29.0
offset_top = -43.0
offset_right = 71.0
offset_bottom = -20.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="Detection" to="." method="_on_detection_area_exited"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
